--- a/index.html
+++ b/index.html
@@ -14,14 +14,11 @@
         <h1>Hangman</h1>
         </header>
 Can you guess the word? Press any key to get started!
-        </div>
 
-          <ul class="list-group">
-            <li class="list-group-item"><p id="current_word">Current Word: </p></li>
-            <li class="list-group-item"><p id="guessLeft">Guesses Left: </p></li>
-            <li class="list-group-item"><p id="let">Your Guesses: </p></li>
-            <li class="list-group-item"><p id="losses">Losses: </p></li>
-          </ul>  
+<p id="current_word">Current Word: </p>
+<p id="guessLeft">Guesses Left: </p>
+<p id="let">Your Guesses: </p>
+<p id="losses">Losses: </p> 
 
           <script type="text/javascript" src="assets/javascript/script.js"></script>      
 
